--- a/Swirl.notes.Rmd
+++ b/Swirl.notes.Rmd
@@ -4,6 +4,7 @@ author: "Sihan Wang"
 date: "9/26/2018"
 output: html_document
 ---
+ Workspace and Files
 ```{r}
 # Assign the value of the current working directory to a variable called "old.dir".
 old.dir <- getwd()
@@ -20,44 +21,44 @@ file.create("mytest.R")
 
 #listing all the files in the current directory
 list.files()
-[1] "mytest.R"  
+#[1] "mytest.R"  
 
 # Check to see if "mytest.R" exists in the working directory using the file.exists() function.
-> file.exists("mytest.R")
-[1] TRUE
+file.exists("mytest.R")
+#[1] TRUE
 # These sorts of functions are excessive for interactive use. But, if you are running a program that loops through a series of files and does some processing on each one, you will want to check to see that each exists before you try to process it.
 
 # Access information about the file "mytest.R" by using file.info()
-> file.info("mytest.R")
-         size isdir mode               mtime               ctime
-mytest.R    0 FALSE  644 2018-09-26 02:31:44 2018-09-26 02:31:44
-                       atime uid gid    uname grname
-mytest.R 2018-09-26 02:31:45 501  20 sunshine  staff
+file.info("mytest.R")
+#         size isdir mode               mtime               ctime
+#mytest.R    0 FALSE  644 2018-09-26 02:31:44 2018-09-26 02:31:44
+#                       atime uid gid    uname grname
+#mytest.R 2018-09-26 02:31:45 501  20 sunshine  staff
 #You can use the $ operator --- e.g., file.info("mytest.R")$mode --- to grab specific items.
 
 # Change the name of the file "mytest.R" to "mytest2.R" by using file.rename().
-> file.rename( "mytest.R" , "mytest2.R")
-[1] TRUE
+file.rename( "mytest.R" , "mytest2.R")
+#[1] TRUE
 
 # Make a copy of "mytest2.R" called "mytest3.R" using file.copy().
-> file.copy("mytest2.R", "mytest3.R")
-[1] TRUE
+file.copy("mytest2.R", "mytest3.R")
+#[1] TRUE
 # You now have two files in the current directory. That may not seem very interesting. But what if you were working with dozens, or millions, of individual files? In that case, being able to programatically act on many files would be absolutely necessary. Don't forget that you can, temporarily, leave the lesson by typing play() and then return by typing nxt().
 
 # Provide the relative path to the file "mytest3.R" by using file.path().
-> file.path("mytest3.R")
-[1] "mytest3.R"
+file.path("mytest3.R")
+#[1] "mytest3.R"
 # You can use file.path to construct file and directory paths that are independent of the operating system your R code is running on. 
 # Pass 'folder1' and 'folder2' as arguments to file.path to make a platform-independent pathname.
-> file.path('folder1' , 'folder2')
-[1] "folder1/folder2"
+file.path('folder1' , 'folder2')
+#[1] "folder1/folder2"
 
 # Take a look at the documentation for dir.create by entering ?dir.create . Notice the 'recursive' argument. In order to create nested directories, 'recursive' must be set to TRUE.
 # Create a directory in the current working directory called "testdir2" and a subdirectory for it called "testdir3", all in one command by using dir.create() and file.path().
-> dir.create(file.path('testdir2', 'testdir3'), recursive = TRUE)
+dir.create(file.path('testdir2', 'testdir3'), recursive = TRUE)
 
 # Go back to your original working directory using setwd(). (Recall that we created the variable old.dir with the full path for the orginal working directory at the start of these questions.)
-> setwd(old.dir)
+setwd(old.dir)
 
 # It is often helpful to save the settings that you had before you began an analysis and then go back to them at the end. This trick is often used within functions; you save, say, the par() settings that you started with, mess around a bunch, and then set them back to the original values at the end. This isn't the same as what we have done here, but it seems similar enough to mention.
 
@@ -67,8 +68,175 @@ mytest.R 2018-09-26 02:31:45 501  20 sunshine  staff
 
 # In this lesson, you learned how to examine your R workspace and work with the  file system of your machine from within R. Thanks for playing!
 
-
-
-
 ```
 
+1.3 Vectors
+Logical vectors can contain the values TRUE, FALSE, and NA (for 'not available').
+These values are generated as the result of logical 'conditions'. Let's experiment with some simple conditions.
+
+> num_vect <- c(0.5, 55, -10,6)
+```{r}
+# Now, create a variable called tf that gets the result of num_vect < 1, which is read as 'num_vect is less than 1'.
+tf <- num_vect < 1
+```
+> tf
+[1]  TRUE FALSE  TRUE FALSE
+The statement num_vect < 1 is a condition and tf tells us whether each corresponding element of our numeric vector num_vect satisfies this condition.
+```{r}
+num_vect >= 6
+```
+If we have two logical expressions, A and B, we can ask whether at least one is TRUE with A | B (logical 'or' a.k.a. 'union') or whether they are both TRUE with A & B (logical 'and' a.k.a. 'intersection'). Lastly, !A is the negation of A and is TRUE when A is FALSE and vice versa.
+
+```{r}
+paste(my_char, collapse = " ")
+```
+[1] "My name is"
+my_name <- c(my_char, "Sihan")
+my_name
+[1] "My"    "name"  "is"    "Sihan"
+
+Try paste("Hello", "world!", sep = " "), where the `sep` argument tells R that we want to separate the joined elements with a single space.
+> paste("Hello", "world!", sep = " ")
+[1] "Hello world!"
+
+For a slightly more complicated example, we can join two vectors, each of length 3. Use paste() to join the integer vector 1:3 with the character vector c("X", "Y", "Z"). This time, use sep = "" to leave no space between the joined elements.
+> paste(1:3,c("X","Y","Z"), sep = "")
+[1] "1X" "2Y" "3Z"
+
+Vector recycling! Try paste(LETTERS, 1:4, sep = "-"), where LETTERS is predefined variable in R containing a character vector of all 26 letters in the English alphabet.
+> paste(LETTERS, 1:4, sep = "-")
+ [1] "A-1" "B-2" "C-3" "D-4" "E-1" "F-2" "G-3" "H-4" "I-1" "J-2" "K-3" "L-4" "M-1"
+[14] "N-2" "O-3" "P-4" "Q-1" "R-2" "S-3" "T-4" "U-1" "V-2" "W-3" "X-4" "Y-1" "Z-2"
+
+1.4 Missing Values
+In R, NA is used to represent any value that is 'not available' or 'missing' (in the statistical sense). In this lesson, we'll explore missing values further.
+
+lets create a vector containing 1000 draws from a standard normal distribution with y <- rnorm(1000).
+> y <- rnorm(1000)
+
+let's create a vector containing 1000 NAs with z <- rep(NA, 1000).
+```{r}
+z <- rep(NA, 1000)
+```
+
+
+let's select 100 elements at random from these 2000 values (combining y and z) such that we don't know how many NAs we'll wind up with or what positions they'll occupy in our final vector -- my_data <- sample(c(y, z), 100).
+```{r}
+my_data <- sample(c(y, z), 100)
+```
+
+
+Let's first ask the question of where our NAs are located in our data. The is.na() function tells us whether each element of a vector is NA. Call is.na() on my_data and assign the result to my_na.
+```{r}
+my_data <- is.na(my_data)
+```
+Everywhere you see a TRUE, you know the corresponding element of my_data is NA. Likewise, everywhere you see a FALSE, you know the corresponding element of my_data is one of our random draws from the standard normal distribution.
+
+introduced the `==` operator as a method of testing for equality between two objects
+
+Let's give that a try here. Call the sum() function on my_na to count the total number of TRUEs in my_na, and thus the total number of NAs in my_data. Don't assign the result to a new variable.
+> sum(my_na)
+[1] 50
+
+let's look at a second type of missing value -- NaN, which stands for 'not a number'. To generate NaN, try dividing (using a forward slash) 0 by 0 now.
+> 0/0
+[1] NaN
+> Inf - Inf
+[1] NaN
+
+
+1.5: Subsetting Vectors
+
+Index vectors come in four different flavors -- logical vectors, vectors of positive integers, vectors of negative integers, and vectors of character strings 
+
+Let's start by indexing with logical vectors. One common scenario when working with real-world data is that we want to extract all elements of a vector that are not NA (i.e.
+| missing data). Recall that is.na(x) yields a vector of logical values the same length as x, with TRUEs corresponding to NA values in x and FALSEs corresponding to non-NA values in x.
+A vector of all NAs
+> x[is.na(x)]
+
+> y <- x[!is.na(x)]
+
+>  y[y > 0]
+
+> x[x > 0]
+ [1]          NA          NA          NA          NA 1.281001928          NA          NA
+ [8]          NA 0.001725552          NA          NA 1.091081303          NA          NA
+[15] 0.233657840          NA 1.308581457 1.395968772          NA          NA          NA
+[22] 1.416751597          NA          NA          NA 0.431930013          NA          NA
+Since NA is not a value, but rather a placeholder for an unknown quantity, the expression NA > 0 evaluates to NA. Hence we get a bunch of NAs mixed in with our positive numbers when we do this.
+
+> x[!is.na(x) & x > 0]
+
+ Many programming languages use what's called 'zero-based indexing', which means that the first element of a vector is considered element 0. R uses 'one-based indexing', which (you guessed it!) means the first element of a vector is considered element 1.
+
+Can you figure out how we'd subset the 3rd, 5th, and 7th elements of x? 
+> x[c(3, 5, 7)]
+[1]       NA 1.281002       NA
+
+the zeroth element of x
+>  x[0]
+numeric(0)
+> x[3000]
+[1] NA
+
+all elements of x EXCEPT for the 2nd and 10 elements
+> x[c(-2, -10)]
+x[-c(2, 10)]
+
+> names(vect)
+[1] "foo"  "bar"  "norf"
+
+> vect2 <- c(11, 2, NA)
+add the `names` attribute to vect2 
+> names(vect2) <- c("foo", "bar", "norf")
+
+check that vect and vect2 are the same by passing them as arguments 
+> identical(vect,vect2)
+[1] TRUE
+
+specify a vector of names
+> vect[c("foo", "bar")]
+foo bar 
+ 11   2 
+ 
+ 
+ 1.6: Logic
+ 
+AND
+`&` and `&&`
+if the right and left operands of AND are both TRUE the entire expression is TRUE, otherwise it is FALSE. 
+
+TRUE` is recycled
+> TRUE & c(TRUE, FALSE, FALSE)
+[1]  TRUE FALSE FALSE
+
+only evaluated with the first member
+> TRUE && c(TRUE, FALSE, FALSE)
+[1] TRUE
+
+ OR 
+| across an entire vector
+|| version of OR only evaluates the first member of a vector
+
+takes one argument
+> isTRUE(6 > 4)
+[1] TRUE
+
+return TRUE if the two R objects passed to it as arguments are identical
+> identical('twins', 'twins')
+[1] TRUE
+
+takes two arguments
+> xor(5 == 6, !FALSE)
+[1] TRUE
+
+which()
+takes a logical vector as an argument and returns the indices of the vector that are TRUE
+> which(ints >7)
+[1] 1 2 7
+
+
+any()
+return TRUE if one or more of the elements in the logical vector is TRUE. 
+all()
+return TRUE if every element in the logical vector is TRUE.
