--- a/Swirl.notes.Rmd
+++ b/Swirl.notes.Rmd
@@ -74,7 +74,7 @@ setwd(old.dir)
 Logical vectors can contain the values TRUE, FALSE, and NA (for 'not available').
 These values are generated as the result of logical 'conditions'. Let's experiment with some simple conditions.
 
-> num_vect <- c(0.5, 55, -10,6)
+num_vect <- c(0.5, 55, -10,6)
 ```{r}
 # Now, create a variable called tf that gets the result of num_vect < 1, which is read as 'num_vect is less than 1'.
 tf <- num_vect < 1
@@ -112,7 +112,7 @@ Vector recycling! Try paste(LETTERS, 1:4, sep = "-"), where LETTERS is predefine
 In R, NA is used to represent any value that is 'not available' or 'missing' (in the statistical sense). In this lesson, we'll explore missing values further.
 
 lets create a vector containing 1000 draws from a standard normal distribution with y <- rnorm(1000).
-> y <- rnorm(1000)
+y <- rnorm(1000)
 
 let's create a vector containing 1000 NAs with z <- rep(NA, 1000).
 ```{r}
@@ -123,12 +123,14 @@ z <- rep(NA, 1000)
 let's select 100 elements at random from these 2000 values (combining y and z) such that we don't know how many NAs we'll wind up with or what positions they'll occupy in our final vector -- my_data <- sample(c(y, z), 100).
 ```{r}
 my_data <- sample(c(y, z), 100)
+my_data
 ```
 
 
 Let's first ask the question of where our NAs are located in our data. The is.na() function tells us whether each element of a vector is NA. Call is.na() on my_data and assign the result to my_na.
 ```{r}
-my_data <- is.na(my_data)
+my_na <- is.na(my_data)
+my_na
 ```
 Everywhere you see a TRUE, you know the corresponding element of my_data is NA. Likewise, everywhere you see a FALSE, you know the corresponding element of my_data is one of our random draws from the standard normal distribution.
 
@@ -136,6 +138,7 @@ introduced the `==` operator as a method of testing for equality between two obj
 
 Let's give that a try here. Call the sum() function on my_na to count the total number of TRUEs in my_na, and thus the total number of NAs in my_data. Don't assign the result to a new variable.
 > sum(my_na)
+
 [1] 50
 
 let's look at a second type of missing value -- NaN, which stands for 'not a number'. To generate NaN, try dividing (using a forward slash) 0 by 0 now.
@@ -240,3 +243,164 @@ any()
 return TRUE if one or more of the elements in the logical vector is TRUE. 
 all()
 return TRUE if every element in the logical vector is TRUE.
+
+1.7: Dates and Times
+
+Get Current Date and Time
+Sys.time()
+Sys.Date()
+
+Use the class() function to confirm d1 is a Date object.
+> class(d1)
+[1] "Date"
+
+We can use the unclass() function to see what d1 looks like internally.
+| Try it out.
+> unclass()
+[1] 17805 #That's the exact number of days since 1970-01-01!
+
+What if we need to reference a date prior to 1970-01-01? Create a
+| variable d2 containing as.Date("1969-01-01").
+
+> unclass(d2)
+[1] -365
+
+| As you may have anticipated, you get a negative number. In this case,
+| it's -365, since 1969-01-01 is exactly one calendar year (i.e. 365 days)
+| BEFORE 1970-01-01.
+
+> class(t1)
+[1] "POSIXct" "POSIXt"
+
+As mentioned earlier, POSIXct is just one of two ways that R represents
+| time information. (You can ignore the second value above, POSIXt, which
+| just functions as a common language between POSIXct and POSIXlt.) Use
+| unclass() to see what t1 looks like internally -- the (large) number of
+| seconds since the beginning of 1970.
+
+> unclass(t1)
+[1] 1538369324
+
+By default, Sys.time() returns an object of class POSIXct, but we can
+| coerce the result to POSIXlt with as.POSIXlt(Sys.time()). Give it a try
+| and store the result in t2.
+
+> t2 <- as.POSIXlt(Sys.time())
+
+> class(t2)
+[1] "POSIXlt" "POSIXt"
+
+> t2
+[1] "2018-10-01 00:51:03 EDT"
+
+| The printed format of t2 is identical to that of t1. Now unclass() t2 to
+| see how it is different internally.
+
+> unclass(t2)
+$sec
+[1] 3.091485
+
+$min
+[1] 51
+
+$hour
+[1] 0
+
+$mday
+[1] 1
+
+$mon
+[1] 9
+
+$year
+[1] 118
+
+$wday
+[1] 1
+
+$yday
+[1] 273
+
+$isdst
+[1] 1
+
+$zone
+[1] "EDT"
+
+$gmtoff
+[1] -14400
+
+attr(,"tzone")
+[1] ""    "EST" "EDT"
+
+t2, like all POSIXlt objects, is just a list of values that make up the
+| date and time. Use str(unclass(t2)) to have a more compact view.
+> str(unclass(t2))
+List of 11
+ $ sec   : num 3.09
+ $ min   : int 51
+ $ hour  : int 0
+ $ mday  : int 1
+ $ mon   : int 9
+ $ year  : int 118
+ $ wday  : int 1
+ $ yday  : int 273
+ $ isdst : int 1
+ $ zone  : chr "EDT"
+ $ gmtoff: int -14400
+ - attr(*, "tzone")= chr [1:3] "" "EST" "EDT"
+
+
+> t2$min
+[1] 51
+
+> weekdays(d1)
+[1] "Monday"
+
+> months(t1)
+[1] "October"
+
+> quarters(t2)
+[1] "Q4"
+
+strptime() converts character vectors to POSIXlt. In that sense, it is
+| similar to as.POSIXlt(), except that the input doesn't have to be in a
+| particular format (YYYY-MM-DD).
+Now, use strptime(t3, "%B %d, %Y %H:%M") to help R convert our date/time
+| object to a format that it understands. Assign the result to a new
+| variable called t4. (You should pull up the documentation for strptime()
+| if you'd like to know more about how it works.)
+> t4 <- strptime(t3, "%B %d, %Y %H:%M") 
+> class(t4)
+[1] "POSIXlt" "POSIXt" 
+
+The variable t1 contains the time at which you created it (recall you
+| used Sys.time()). Confirm that some time has passed since you created t1
+| by using the 'greater than' operator to compare it to the current time:
+| Sys.time() > t1
+> Sys.time() > t1
+[1] TRUE
+ 
+ So we know that some time has passed, but how much? Try subtracting t1
+| from the current time using Sys.time() - t1. Don't forget the parentheses
+| at the end of Sys.time(), since it is a function.
+> Sys.time() - t1
+Time difference of 15.72196 hours
+
+ The same line of thinking applies to addition and the other comparison
+| operators. If you want more control over the units when finding the above
+| difference in times, you can use difftime(), which allows you to specify
+| a 'units' parameter.
+
+1.8: Functions
+
+In the following question you will be asked to modify a script that will
+| appear as soon as you move on from this question. When you have finished
+| modifying the script, save your changes to the script and type submit()
+| and the script will be evaluated. There will be some comments in the
+| script that opens up, so be sure to read them!
+
+
+
+
+
