--- a/assignment1.Rmd
+++ b/assignment1.Rmd
@@ -1,6 +1,34 @@
 ---
 title: "Assignment 1"
-author: "YOUR NAME"
+author: "Jiacong Zhu"
 date: "9/8/2020"
 output: html_document
 ---
+
+# Assignment 1
+
+Link to my Githun profile page: https://github.com/jz3254
+
+## My Goals for HUDK4050
+
+* Three goals I have for this class
+  + Use Github well
+  + Use Rstudio well
+  + Learn as much as possible
+
+## Video Review
+
+https://www.youtube.com/watch?v=CpCMO4nrVvw&feature=youtu.be
+
+This is a very helpful video!
+
+I will change by learn more stuff about data analysis, and I will keep working hard!!!
+
+Skill  | Score
+------------- | -------------
+Programming skill  | 2
+Class videos  | are very helpful
+
+## This is how I am feeling about the semester
+
+![Feeling](WechatIMG148.png) 
