--- a/assignment1.Rmd
+++ b/assignment1.Rmd
@@ -1,6 +1,31 @@
 ---
-title: "Assignment 1"
-author: "YOUR NAME"
-date: "9/8/2020"
+title: "HUDK 4050 Assignment 1"
+author: "YixiongXu"
+date: "9/13/2020"
 output: html_document
 ---
+
+# Assignment 1
+[linked phrase](https://github.com/YixiongXu)
+
+
+## My Goals for HUDK4050
+1. Learning R language
+2. Arrange time reasonably
+3. Proficient in Github
+
+
+## Video Review
+For review videos, I would keep the format but change the opening music.
+
+
+Skill  | Score
+------------- | -------------
+Coding  | 2
+Clean  | Clear
+              
+
+## This is how I am feeling about the semester
+![Dog with flower](Dog with flower.PNG)
+
+
