Assignment 1 files uploading with a smaller size image

--- a/assignment1.Rmd
+++ b/assignment1.Rmd
@@ -24,6 +24,6 @@ When I watch 1.4 Git & Github, I finally know and understand how this git things
 |Can you show us more R skills?|
 
 ## This is how I am feeling about the semester
-![image](IMG_7936.jpeg)
+![image](IMG_7936_opt.jpg)
 
   
