--- a/assignment1.Rmd
+++ b/assignment1.Rmd
@@ -4,3 +4,29 @@ author: "YOUR NAME"
 date: "9/8/2020"
 output: html_document
 ---
+
+# Assignment 1
+
+[My GitHub Profile](https://github.com/zjf2003tc)
+
+## My Goals for HUDK4050
+
+* Goal 1: Improve visual appeal of my graphs and tables
+* Goal 2: Get super familiar with GitHub and Git version control
+* Goal 3: Improve loop-writing ability for better abstraction in my code
+
+## Video Review
+
+The class videos are well-edited and enjoyable to watch. One way to improve asynchronous discussion in the class could be posing a difficult question at the end of the videos and asking people to respond in the comment section.
+
+| Skill  | Score |
+|:-------|:------|
+| Ggplot Visualizations| 5.0   |
+| High Definition | Engaging   |
+
+## This is how I am feeling about the semester
+
+![My feelings](Einstein.png)
+
+
+
