Uploading my final assignment 1 files

--- a/assignment1.Rmd
+++ b/assignment1.Rmd
@@ -26,7 +26,8 @@ The previous course videos have well demonstrated some basic knowledge of learni
 
 ## This is how I am feeling about the semester
 
-![](image.jpeg)
+![feeling](image.jpeg)
+
 
 
 
