--- a/assignment1.Rmd
+++ b/assignment1.Rmd
@@ -26,4 +26,4 @@ It's really basic and useful | hope it could be more detailed
 
 ## This is how I am feeling about the semester
 
-
+![My feelings](1.jpg)
