--- a/assignment1.Rmd
+++ b/assignment1.Rmd
@@ -1,6 +1,29 @@
 ---
 title: "Assignment 1"
-author: "YOUR NAME"
-date: "9/8/2020"
+author: "Dan Lei"
+date: "9/17/2020"
 output: html_document
 ---
+
+# Assignment 1
+
+[My Github Profile](https://github.com/dl3418)
+
+## My Goals for HUDK4050
+
+* Get familiar with coding
+* Be able to apply coding skills into practical educational analysis
+* Learn to understand facts through data
+
+## Video Review
+
+For class videos, I would keep those screen recording which explain the steps of coding and using Rstudio. I would add more text descriptions for key points.
+
+| Skill  | Score |
+|--------|-------|
+| Skiing |     3 |
+| Coding |   1.5 |
+
+## This is how I am feeling about the semester.
+
+![My feelings](Grinning Emoji.png)
